fix center alignment

--- a/src/interface/src/styleguide/scenario-card/scenario-card.component.scss
+++ b/src/interface/src/styleguide/scenario-card/scenario-card.component.scss
@@ -36,6 +36,7 @@
     display: flex;
     flex-direction: row;
     gap: 1em;
+    align-items: center;
   }
   .controls-section {
     display: flex;
@@ -45,7 +46,6 @@
 
   h4 {
     @include h4();
-    line-height: 0;
   }
 
   .title-chip {
